@@ -1,3 +1,8 @@
+2013-04-26 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  Fix handling of a in addition, subtraction and negation, more flexible copy, fix comparison.
+
 2013-04-25 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
